--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="dropdown">
                             <ul id="nav" class="nav">
                                 <li class="menu-item">
-                                    <a class="smothscroll" href="#home" title="Home"><img src="img/icons/home 2.svg" class="img-icons" alt="" srcset=""></a>
+                                    <a class="smothscroll" href="#headerwrap" title="Home"><img src="img/icons/home 2.svg" class="img-icons" alt="" srcset=""></a>
                                 </li>
                                 <li class="menu-item">
                                     <a class="smothscroll" href="#couple" title="Couple"><img src="img/icons/couple.svg" class="img-icons" alt="" srcset=""></a>
@@ -89,61 +89,46 @@
     </div>
     <!--/.#headerwrap -->
 
-    <section id="home" name="home">
-        <div id="intro">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2 col-lg-offset-1">
-                        <h5>ABOUT</h5>
-                    </div>
-                    <div class="col-lg-6">
-                        <p>
-                            I'm web designer & front-end developer with 7 years of professional experience. I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet interfaces. I also have skills in other fields like branding,
-                            icon design or web development.
-                        </p>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>
-                            <a href="#"><i class="icon-file"></i></a>
-                            <sm>DOWNLOAD PDF</sm>
-                        </p>
-                    </div>
-                </div>
-                <!--/.row -->
-            </div>
-            <!--/.container -->
-        </div>
-        <!--/ #intro -->
-    </section>
-
     <section id="couple" name="couple">
         <!--EDUCATION DESCRIPTION -->
         <div class="container desc">
             <div class="row justify-content-center">
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <div class="text-center">
-                        <img src="img/couple/pria.jpg" class="img-couple img-fluid rounded-circle" alt="" srcset="">
-                        <div class="couple-name">
-                            <h1 class="name-couple">Steven Fredrik Hadijono</h1>
-                            <h3>
-                                Putra dari
-                            </h3>
-                            <h1 class="name-parent">Heri Hadijono
-                            </h1>
-                        </div>
+                        <h1 class="title-section">We’re Getting Married!</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore maiores cum vel rem tempore saepe totam delectus ad, culpa obcaecati deserunt a necessitatibus ipsam nam sunt nostrum fugiat optio temporibus.</p>
                     </div>
-                    <br>
                 </div>
-                <div class="col-md-6">
-                    <div class="text-center">
+                <div class="col-md-5">
+                    <div class="bride text-center">
                         <img src="img/couple/wanita.jpg" class="img-couple img-fluid rounded-circle" alt="" srcset="">
                         <div class="couple-name">
                             <h1 class="name-couple">Devi Solina Rahayu</h1>
                             <h3>
                                 Putri dari
                             </h3>
-                            <h1 class="name-parent">
+                            <h1>
                                 Alm. Miskanto
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="bridge text-center">
+                        <div class="couple-name">
+                            <h1 class="name-couple">&</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="bride text-center">
+                        <img src="img/couple/pria.jpg" class="img-couple img-fluid rounded-circle" alt="" srcset="">
+                        <div class="couple-name">
+                            <h1 class="name-couple">Steven Fredrik Hadijono</h1>
+                            <h3>
+                                Putra dari
+                            </h3>
+                            <h1>Heri Hadijono
                             </h1>
                         </div>
                     </div>
@@ -151,82 +136,22 @@
             </div>
             <!--/.row -->
         </div>
+        <br />
+        <br />
         <!--/.container -->
     </section>
 
     <section id="event" name="event">
-        <!--FOOTER DESCRIPTION -->
-        <div id="footwrap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2">
-                        <h5>CONTACT</h5>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>
-                            <t>Email</t><br /> contact@example.com <br />
-                        </p>
-                        <p>
-                            <t>Adress</t><br /> Some Ave. 987 <br /> Postal 23892 <br /> London, England. <br />
-                        </p>
-                        <p>
-                            <t>Phone</t><br /> +55 8933-2383 <br />
-                        </p>
-                        <p>
-                            <t>Social Links</t><br />
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-apple"></i></a>
-                        </p>
-                    </div>
-                    <div class="col-lg-6">
-                        <p>
-                            <sm>CONTACT FORM</sm>
-                        </p>
-                        <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
-                            <div class="form-group">
-                                <label for="contact-name">Your Name</label>
-                                <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                <div class="validate"></div>
-                            </div>
-                            <div class="form-group">
-                                <label for="contact-email">Your Email</label>
-                                <input type="email" name="email" class="form-control" id="contact-email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                                <div class="validate"></div>
-                            </div>
-                            <div class="form-group">
-                                <label for="contact-subject">Subject</label>
-                                <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                                <div class="validate"></div>
-                            </div>
+        <!--PORTFOLIO DESCRIPTION -->
+        <div class="container desc">
+            <div class="row justify-content-center">
 
-                            <div class="form-group">
-                                <label for="contact-message">Your Message</label>
-                                <textarea class="form-control" name="message" id="contact-message" placeholder="Your Message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-                                <div class="validate"></div>
-                            </div>
-
-                            <div class="loading"></div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">
-                                Your message has been sent. Thank you!
-                            </div>
-
-                            <div class="form-send">
-                                <button type="submit" class="btn btn-large">
-                    Send Message
-                  </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <!--/.row -->
             </div>
-            <!--/.container -->
+            <!--/.row -->
+            <br />
+            <br />
         </div>
-        <!--/ #footer -->
+        <!--/.container -->
     </section>
 
     <section id="gallery" name="gallery">
