update foto couple

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="bride text-center">
-                        <img src="img/couple/wanita.jpg" class="img-couple img-fluid rounded-circle" alt="" srcset="">
+                        <img src="img/couple/wanita.png" class="img-couple img-fluid rounded-circle" alt="" srcset="">
                         <div class="couple-name">
                             <h1 class="name-couple">Devi Solina Rahayu</h1>
                             <h3>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="bride text-center">
-                        <img src="img/couple/pria.jpg" class="img-couple img-fluid rounded-circle" alt="" srcset="">
+                        <img src="img/couple/pria.png" class="img-couple img-fluid rounded-circle" alt="" srcset="">
                         <div class="couple-name">
                             <h1 class="name-couple">Steven Fredrik Hadijono</h1>
                             <h3>
