--- a/index.html
+++ b/index.html
@@ -34,52 +34,23 @@
 </head>
 
 <body data-spy="scroll" data-offset="64" data-target="#section-topbar">
-    <div id="section-topbar">
-        <div id="topbar-inner">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="dropdown">
-                            <ul id="nav" class="nav">
-                                <li class="menu-item">
-                                    <a class="smothscroll" href="#headerwrap" title="Home"><img src="img/icons/home 2.svg" class="img-icons" alt="" srcset=""></a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="smothscroll" href="#couple" title="Couple"><img src="img/icons/couple.svg" class="img-icons" alt="" srcset=""></a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="smothscroll" href="#event" title="Event"><img src="img/icons/schedule.svg" class="img-icons" alt="" srcset=""></a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="smothscroll" href="#gallery" title="Gallery"><img src="img/icons/gallery.svg" class="img-icons" alt="" srcset=""></a>
-                                </li>
-                                <li class="menu-item">
-                                    <a class="smothscroll" href="#wishes" title="Wishes"><img src="img/icons/wishes.svg" class="img-icons" alt="" srcset=""></a>
-                                </li>
-                            </ul>
-                            <!--/ uL#nav -->
-                        </div>
-                    </div>
-
-                    <!-- /.dropdown -->
-
-                    <div class="clear"></div>
-                </div>
-                <!--/.row -->
-            </div>
-            <!--/.container -->
-
-            <div class="clear"></div>
-        </div>
-        <!--/ #topbar-inner -->
-    </div>
-    <!--/ #section-topbar -->
 
     <div id="headerwrap">
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-12">
-                    <img src="img/name.png" class="img-name" alt="" srcset="">
+                    <img src="img/name.png" class="img-welcome" alt="" srcset="">
+                </div>
+                <div class="col-lg-12">
+                    <p class="title-welcome">Devi & Steven Wedding</p>
+                    <div class="to-welcome">
+                        <p>Kepada Bapak / Ibu / Saudara/i</p>
+                        <p class='to-name'>Kiki</p>
+                        <p>Mohon maaf bila ada kesalahan dalam penulisan nama/gelar</p>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <a href="main.html" class="btn btn-outline-light btn-buka"> BUKA UNDANGAN </a>
                 </div>
                 <!--/.col-lg-12 -->
             </div>
@@ -88,215 +59,6 @@
         <!--/.container -->
     </div>
     <!--/.#headerwrap -->
-
-    <section id="couple" name="couple">
-        <!--EDUCATION DESCRIPTION -->
-        <div class="container desc">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="text-center">
-                        <h1 class="title-section">We’re Getting Married!</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore maiores cum vel rem tempore saepe totam delectus ad, culpa obcaecati deserunt a necessitatibus ipsam nam sunt nostrum fugiat optio temporibus.</p>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <div class="bride text-center">
-                        <img src="img/couple/wanita.png" class="img-couple img-fluid rounded-circle" alt="" srcset="">
-                        <div class="couple-name">
-                            <h1 class="name-couple">Devi Solina Rahayu</h1>
-                            <h3>
-                                Putri dari
-                            </h3>
-                            <h1>
-                                Alm. Miskanto
-                            </h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="bridge text-center">
-                        <div class="couple-name">
-                            <h1 class="name-couple">&</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <div class="bride text-center">
-                        <img src="img/couple/pria.png" class="img-couple img-fluid rounded-circle" alt="" srcset="">
-                        <div class="couple-name">
-                            <h1 class="name-couple">Steven Fredrik Hadijono</h1>
-                            <h3>
-                                Putra dari
-                            </h3>
-                            <h1>Heri Hadijono
-                            </h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--/.row -->
-        </div>
-        <br />
-        <br />
-        <!--/.container -->
-    </section>
-
-    <section id="event" name="event">
-        <!--PORTFOLIO DESCRIPTION -->
-        <div class="container desc">
-            <div class="row justify-content-center">
-
-            </div>
-            <!--/.row -->
-            <br />
-            <br />
-        </div>
-        <!--/.container -->
-    </section>
-
-    <section id="gallery" name="gallery">
-        <!--PORTFOLIO DESCRIPTION -->
-        <div class="container desc">
-            <div class="row">
-                <div class="col-lg-2 col-lg-offset-1">
-                    <h5>PORTFOLIO</h5>
-                </div>
-                <div class="col-lg-6">
-                    <p><img class="img-responsive" src="img/port01.jpg" alt="" /></p>
-                </div>
-                <div class="col-lg-3">
-                    <p>CANALS OF ENGLAND</p>
-                    <p>
-                        <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book.<br /><br />
-                            <sm><i class="icon-tag"></i> design</sm>
-                        </more>
-                    </p>
-                </div>
-
-                <div class="col-lg-6 col-lg-offset-3">
-                    <p><img class="img-responsive" src="img/port02.jpg" alt="" /></p>
-                </div>
-                <div class="col-lg-3">
-                    <p>SANKEY</p>
-                    <p>
-                        <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book.<br /><br />
-                            <sm><i class="icon-tag"></i> front-end</sm>
-                        </more>
-                    </p>
-                </div>
-
-                <div class="col-lg-6 col-lg-offset-3">
-                    <p><img class="img-responsive" src="img/port03.jpg" alt="" /></p>
-                </div>
-                <div class="col-lg-3">
-                    <p>WE GROW</p>
-                    <p>
-                        <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book.<br /><br />
-                            <sm><i class="icon-tag"></i> web design</sm>
-                        </more>
-                    </p>
-                </div>
-            </div>
-            <!--/.row -->
-            <br />
-            <br />
-        </div>
-        <!--/.container -->
-    </section>
-
-    <section id="wishes" name="wishes">
-        <!--FOOTER DESCRIPTION -->
-        <div id="footwrap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2">
-                        <h5>CONTACT</h5>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>
-                            <t>Email</t><br /> contact@example.com <br />
-                        </p>
-                        <p>
-                            <t>Adress</t><br /> Some Ave. 987 <br /> Postal 23892 <br /> London, England. <br />
-                        </p>
-                        <p>
-                            <t>Phone</t><br /> +55 8933-2383 <br />
-                        </p>
-                        <p>
-                            <t>Social Links</t><br />
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-apple"></i></a>
-                        </p>
-                    </div>
-                    <div class="col-lg-6">
-                        <p>
-                            <sm>CONTACT FORM</sm>
-                        </p>
-                        <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
-                            <div class="form-group">
-                                <label for="contact-name">Your Name</label>
-                                <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                <div class="validate"></div>
-                            </div>
-                            <div class="form-group">
-                                <label for="contact-email">Your Email</label>
-                                <input type="email" name="email" class="form-control" id="contact-email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                                <div class="validate"></div>
-                            </div>
-                            <div class="form-group">
-                                <label for="contact-subject">Subject</label>
-                                <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                                <div class="validate"></div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="contact-message">Your Message</label>
-                                <textarea class="form-control" name="message" id="contact-message" placeholder="Your Message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-                                <div class="validate"></div>
-                            </div>
-
-                            <div class="loading"></div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">
-                                Your message has been sent. Thank you!
-                            </div>
-
-                            <div class="form-send">
-                                <button type="submit" class="btn btn-large">
-                    Send Message
-                  </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <!--/.row -->
-            </div>
-            <!--/.container -->
-        </div>
-        <!--/ #footer -->
-    </section>
-
-    <div id="copyrights">
-        <div class="container">
-            <p>&copy; Copyrights <strong>Kelvin</strong>. All Rights Reserved</p>
-            <div class="credits">
-                <!--
-          You are NOT allowed to delete the credit link to TemplateMag with free version.
-          You can delete the credit link only if you bought the pro version.
-          Buy the pro version with working PHP/AJAX contact form: https://templatemag.com/kelvin-bootstrap-resume-template/
-          Licensing information: https://templatemag.com/license/
-        -->
-                Created with Kelvin template by
-                <a href="https://templatemag.com/">TemplateMag</a>
-            </div>
-        </div>
-    </div>
 
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
