--- a/main.html
+++ b/main.html
@@ -136,20 +136,23 @@
             </div>
             <!--/.row -->
         </div>
-        <br />
-        <br />
+        <div class="clear"></div>
         <!--/.container -->
     </section>
 
     <section id="event" name="event">
         <!--PORTFOLIO DESCRIPTION -->
         <div class="container desc">
-            <div class="row justify-content-center">
-
+            <div class="row centered">
+                <div class="col-md-12">
+                    <h1 class="title-section">Lokasi Acara</h1>
+                </div>
+                <div class="col-md-12">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.630985682757!2d112.5373240147762!3d-7.505926194586013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e780b44f54a4cff%3A0xfbff40d18d76e2c7!2sVanda%20Tirta!5e0!3m2!1sid!2sid!4v1621947627817!5m2!1sid!2sid" width="100%" height="400px"  style="border: 5px solid black;" allowfullscreen="true" loading="lazy"></iframe>
+                </div>
             </div>
             <!--/.row -->
-            <br />
-            <br />
+        <div class="clear"></div>
         </div>
         <!--/.container -->
     </section>
@@ -157,47 +160,56 @@
     <section id="gallery" name="gallery">
         <!--PORTFOLIO DESCRIPTION -->
         <div class="container desc">
-            <div class="row">
-                <div class="col-lg-2 col-lg-offset-1">
-                    <h5>PORTFOLIO</h5>
+            <div class="row centered">
+                <div class="col-md-12">
+                    <h1 class="title-section">Galeri</h1>
                 </div>
-                <div class="col-lg-6">
-                    <p><img class="img-responsive" src="img/port01.jpg" alt="" /></p>
-                </div>
-                <div class="col-lg-3">
-                    <p>CANALS OF ENGLAND</p>
-                    <p>
-                        <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book.<br /><br />
-                            <sm><i class="icon-tag"></i> design</sm>
-                        </more>
-                    </p>
-                </div>
+                <div class="col-md-12">
+                        <!-- Gallery -->
+                    <div class="row">
+                    <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                        <img
+                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
+                        class="w-100 shadow-1-strong rounded mb-4"
+                        alt=""
+                        />
 
-                <div class="col-lg-6 col-lg-offset-3">
-                    <p><img class="img-responsive" src="img/port02.jpg" alt="" /></p>
-                </div>
-                <div class="col-lg-3">
-                    <p>SANKEY</p>
-                    <p>
-                        <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book.<br /><br />
-                            <sm><i class="icon-tag"></i> front-end</sm>
-                        </more>
-                    </p>
-                </div>
+                        <img
+                        src="https://mdbootstrap.com/img/Photos/Vertical/mountain1.jpg"
+                        class="w-100 shadow-1-strong rounded mb-4"
+                        alt=""
+                        />
+                    </div>
 
-                <div class="col-lg-6 col-lg-offset-3">
-                    <p><img class="img-responsive" src="img/port03.jpg" alt="" /></p>
-                </div>
-                <div class="col-lg-3">
-                    <p>WE GROW</p>
-                    <p>
-                        <more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                            specimen book.<br /><br />
-                            <sm><i class="icon-tag"></i> web design</sm>
-                        </more>
-                    </p>
+                    <div class="col-lg-4 mb-4 mb-lg-0">
+                        <img
+                        src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg"
+                        class="w-100 shadow-1-strong rounded mb-4"
+                        alt=""
+                        />
+
+                        <img
+                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg"
+                        class="w-100 shadow-1-strong rounded mb-4"
+                        alt=""
+                        />
+                    </div>
+
+                    <div class="col-lg-4 mb-4 mb-lg-0">
+                        <img
+                        src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg"
+                        class="w-100 shadow-1-strong rounded mb-4"
+                        alt=""
+                        />
+
+                        <img
+                        src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg"
+                        class="w-100 shadow-1-strong rounded mb-4"
+                        alt=""
+                        />
+                    </div>
+                    </div>
+<!-- Gallery -->
                 </div>
             </div>
             <!--/.row -->
