--- a/main.html
+++ b/main.html
@@ -20,6 +20,7 @@
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Libraries CSS Files -->
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet" />
@@ -78,7 +79,9 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-12">
+                    <div data-aos="zoom-in">
                     <img src="img/name.png" class="img-name" alt="" srcset="">
+                    </div>
                 </div>
                 <!--/.col-lg-12 -->
             </div>
@@ -93,13 +96,16 @@
         <div class="container desc">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <div class="text-center">
+                    <div class="text-center" data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom" data-aos-delay="100">
                         <h1 class="title-section">We’re Getting Married!</h1>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore maiores cum vel rem tempore saepe totam delectus ad, culpa obcaecati deserunt a necessitatibus ipsam nam sunt nostrum fugiat optio temporibus.</p>
+                    <br>
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="bride text-center">
+                    <div class="bride text-center" data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom" data-aos-delay="200">
                         <img src="img/couple/wanita.png" class="img-couple img-fluid rounded-circle" alt="" srcset="">
                         <div class="couple-name">
                             <h1 class="name-couple">Devi Solina Rahayu</h1>
@@ -120,7 +126,8 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="bride text-center">
+                    <div class="bride text-center" data-aos="fade-up"
+     data-aos-anchor-placement="top-bottom" data-aos-delay="300">
                         <img src="img/couple/pria.png" class="img-couple img-fluid rounded-circle" alt="" srcset="">
                         <div class="couple-name">
                             <h1 class="name-couple">Steven Fredrik Hadijono</h1>
@@ -136,22 +143,63 @@
             <!--/.row -->
         </div>
         <div class="clear"></div>
+        <br><br>
         <!--/.container -->
     </section>
 
     <section id="event" name="event">
         <!--PORTFOLIO DESCRIPTION -->
-        <div class="container desc">
+        <div class="container">
             <div class="row centered">
                 <div class="col-md-12">
-                    <h1 class="title-section">Lokasi Acara</h1>
+                    <h1 class="title-section">Detail Acara</h1>
+                    <br>
                 </div>
-                <div class="col-md-12">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.630985682757!2d112.5373240147762!3d-7.505926194586013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e780b44f54a4cff%3A0xfbff40d18d76e2c7!2sVanda%20Tirta!5e0!3m2!1sid!2sid!4v1621947627817!5m2!1sid!2sid" width="100%" height="400px"  style="border: 5px solid black;" allowfullscreen="true" loading="lazy"></iframe>
+            </div>
+            <div class="row centered">
+                <div class="col-sm-6">
+                    <div class="card text-white card-has-bg click-col" style="background-image:url('https://www.freepnglogos.com/uploads/golden-border-png/golden-border-gold-frame-border-png-gold-frame-border-png-clip-art-9.png');">
+                        <img class="card-img d-none" src="https://www.freepnglogos.com/uploads/golden-border-png/golden-border-gold-frame-border-png-gold-frame-border-png-clip-art-9.png" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                        <div class="card-img-overlay d-flex flex-column">
+                            <div class="card-body">
+                                <h1 class="title-section">Pemberkatan</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card text-white card-has-bg click-col" style="background-image:url('https://www.freepnglogos.com/uploads/golden-border-png/golden-border-gold-frame-border-png-gold-frame-border-png-clip-art-9.png');">
+                        <img class="card-img d-none" src="https://www.freepnglogos.com/uploads/golden-border-png/golden-border-gold-frame-border-png-gold-frame-border-png-clip-art-9.png" alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+                        <div class="card-img-overlay d-flex flex-column">
+                            <div class="card-body">
+                                <h1 class="title-section">Pemberkatan</h1>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!--/.row -->
         <div class="clear"></div>
+        <br><br>
+        </div>
+        <!--/.container -->
+    </section>
+
+        <section id="location" name="location">
+        <!--PORTFOLIO DESCRIPTION -->
+        <div class="container">
+            <div class="row centered">
+                <div class="col-md-12">
+                    <h1 class="title-section">Lokasi Acara</h1>
+                    <br>
+                </div>
+                <div class="col-md-12">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.630985682757!2d112.5373240147762!3d-7.505926194586013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e780b44f54a4cff%3A0xfbff40d18d76e2c7!2sVanda%20Tirta!5e0!3m2!1sid!2sid!4v1621947627817!5m2!1sid!2sid" width="100%" height="400px"  style="border: 5px solid rgb(150, 150, 150);" allowfullscreen="true" loading="lazy"></iframe>
+                </div>
+            </div>
+            <!--/.row -->
+        <div class="clear"></div>
+        <br><br>
         </div>
         <!--/.container -->
     </section>
@@ -300,6 +348,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
