update footer gallery

--- a/main.html
+++ b/main.html
@@ -81,6 +81,9 @@
                 <div class="col-lg-12">
                     <div data-aos="zoom-in">
                         <img src="img/name.png" class="img-name" alt="" srcset="">
+                        <br><br>
+                        <a style="font-size: 20pt; font-family: 'anisha'; color: white;" class="btn btn-outline-dark btn-lg" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Devi+%26+Steven+Wedding&details=Tuhan+yang+menjadikan+sesuatu+yang+indah+pada+waktunya.+Dia+yang+mempertemukan%2C+kini+Dia+pula+yang+mempersatukan+Putra+Putri+kami+dalam+pernikahan+kudus&location=Kolam+Renang+Vanda+Tirta%2C+Jalan+Kolam+Renang+No.105%2C+Tambak+Agung%2C+Kebondalem%2C+Kec.+Mojosari%2C+Mojokerto%2C+Jawa+Timur+61382&dates=20210604T030000Z%2F20210604T100000Z"
+                            target="_blank" rel="noopener noreferrer">Save The Date</a>
                     </div>
                 </div>
                 <!--/.col-lg-12 -->
@@ -110,7 +113,7 @@
                                 Putri dari
                             </h3>
                             <h1>
-                                Alm. Miskanto
+                                Bapak Miskanto (Alm.)<br>&<br>Ibu Atik Sudarwati
                             </h1>
                         </div>
                     </div>
@@ -130,8 +133,7 @@
                             <h3>
                                 Putra dari
                             </h3>
-                            <h1>Heri Hadijono
-                            </h1>
+                            <h1>Bapak Heri Hadijono<br>&<br>Ibu Lian Hwa</h1>
                         </div>
 
                     </div>
@@ -139,8 +141,8 @@
                 <div class="row justify-content-center">
                     <div class="col-md-8">
                         <div class="text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100">
-
                             <p>"Demikian mereka bukan lagi dua melakukan satu. Karena itu apa yang telah dipersatukan Allah, tidak boleh diceraikan manusia" <br>(Matthew/Matius 19 : 6 )<br>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -158,9 +160,9 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
-                    <h1 class="title-section">Detail Acara</h1>
+                    <h1 class="title-section" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100">Detail Acara</h1>
                     <br>
-                    <img src="img/Details.png" class="img-fluid">
+                    <img src="img/Details.png" class="img-fluid" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="200">
                 </div>
             </div>
             <!--/.row -->
@@ -245,140 +247,63 @@
         <!--FOOTER DESCRIPTION -->
         <div id="footwrap">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-2">
-                        <h5>CONTACT</h5>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>
-                            <t>Instagram</t><br /> towerbarat.creative <br />
-                        </p>
-                        <p>
-                            <t>Website</t><br /> towerbarat.site <br />
-                        </p>
-                        <p>
-                            <t>Phone</t><br /> +62 8515-5300-552 <br />
-                        </p>
-                        <p>
-                            <t>Social Links</t><br />
-                            <a href="https://www.instagram.com/towerbarat.creative/"><i
-                                        class="fa fa-instagram"></i></a>
-                            <a href="https://towerbarat.site/"><i class="fa fa-dribbble"></i></a>
-                            <a href="https://api.whatsapp.com/send?phone=6285155300552"><i
-                                        class="fa fa-whatsapp"></i></a>
-
-                        </p>
-                    </div>
-                    <!-- <div class="col-lg-6">
-                        <p>
-                            <sm>CONTACT FORM</sm>
-                        </p>
-                        <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
+                <div class="row justify-content-center">
+                    <div class="col-md-8">
+                        <form style="color:white" action="contactform/contactform.php" method="POST">
                             <div class="form-group">
-                                <label for="contact-name">Your Name</label>
-                                <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                <div class="validate"></div>
+                                <label for="name">Nama</label>
+                                <input style="font-size: 10pt;" type="text" name="name" class="form-control" id="name" placeholder="Masukan Nama..." />
                             </div>
                             <div class="form-group">
-                                <label for="contact-email">Your Email</label>
-                                <input type="email" name="email" class="form-control" id="contact-email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                                <div class="validate"></div>
+                                <label for="email">Email</label>
+                                <input style="font-size: 10pt;" type="email" name="email" class="form-control" id="email" placeholder="Masukan Email..." />
                             </div>
                             <div class="form-group">
-                                <label for="contact-subject">Subject</label>
-                                <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                                <div class="validate"></div>
+                                <label for="whatsapp">Whatsapp</label>
+                                <input style="font-size: 10pt;" type="text" name="whatsapp" class="form-control" id="whatsapp" placeholder="Masukan Whatsapp..." />
                             </div>
 
                             <div class="form-group">
-                                <label for="contact-message">Your Message</label>
-                                <textarea class="form-control" name="message" id="contact-message" placeholder="Your Message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-                                <div class="validate"></div>
-                            </div>
-
-                            <div class="loading"></div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">
-                                Your message has been sent. Thank you!
-                            </div>
-
-                            <div class="form-send">
-                                <button type="submit" class="btn btn-large">
-                    Send Message
-                  </button>
-                            </div>
-                        </form>
-                    </div>
-                </div> -->
-                    <div class="col-lg-6">
-                        <p>
-                            <sm>CONTACT FORM</sm>
-                        </p>
-                        <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
-                            <div class="form-group">
-                                <label for="contact-name">Your Name</label>
-                                <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                <div class="validate"></div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="contact-email">Your Whatsapp</label>
-                                <input type="email" name="whatsapp" class="form-control" id="contact-email" placeholder="Your Whatsapp" data-rule="whatsapp" data-msg="Please enter a valid email" />
-                                <div class="validate"></div>
+                                <label for="message">Pesan</label>
+                                <textarea class="form-control" style="font-size: 10pt;" name="message" id="message" placeholder="Masukan Pesan..." rows="5"></textarea>
                             </div>
                             <div class="form-group">
-                                <label for="contact-message">Your Message</label>
-                                <textarea class="form-control" name="message" id="contact-message" placeholder="Your Message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-                                <div class="validate"></div>
-                            </div>
-                            <div class="form-group">
-                                <label for="contact-email">Konfirmasi Kehadiran</label>
-                                <input type="email" name="whatsapp" class="form-control" id="contact-email" placeholder="Konfirmasi Kehadiran" data-rule="whatsapp" data-msg="Please enter a valid email" />
-                                <div class="validate"></div>
+                                <label for="">Konfirmasi Kehadiran</label>
+                                <select style="font-size: 10pt;" name="kehadiran" class="form-control" id="kehadiran">
+                                        <option value="1">Hadir</option>
+                                        <option value="2">Ragu</option>
+                                        <option value="3">Tidak Hadir</option>
+                                    </select>
                             </div>
                             <div class="form-group">
                                 <label for="contact-email">Bila hadir, Jumlah yang akan datang ke acara
                                         :</label><br>
-                                <input type="radio" id="vehicle1" name="1" value="Bike">
-                                <label for="vehicle1"> 1</label><br>
-                                <input type="radio" id="vehicle1" name="2" value="Bike">
-                                <label for="vehicle1"> 2</label><br>
-                                <input type="radio" id="vehicle1" name="3" value="Bike">
-                                <label for="vehicle1"> 3</label><br>
+                                <input type="radio" id="" name="jumlah_hadir" value="1">
+                                <label for=""> 1</label><br>
+                                <input type="radio" id="" name="jumlah_hadir" value="2">
+                                <label for=""> 2</label><br>
+                                <input type="radio" id="" name="jumlah_hadir" value="3">
+                                <label for=""> 3</label><br>
                                 <div class="validate"></div>
                             </div>
-
-
-
-                            <div class="loading"></div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">
-                                Your message has been sent. Thank you!
+                            <div class="text-center">
+                                <input type="submit" class="btn btn-lg btn-secondary" value="Kirim">
                             </div>
 
-                            <div class="form-send">
-                                <button type="submit" class="btn btn-large">
-                                        Send Message
-                                    </button>
-                            </div>
                         </form>
                     </div>
+                    <div class="col-md-8">
+                        <div class="text-center">
+                            <a href="https://www.instagram.com/towerbarat.creative/">
+                                <img src="img/footer.svg" class="copyrights img-fluid" alt="">
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <!--/.row -->
             </div>
-            <!--/.container -->
         </div>
-        <!--/ #footer -->
     </section>
 
-    <div id="copyrights">
-        <div class="container">
-            <p>&copy; Copyrights <strong>Towerbarat</strong>. All Rights Reserved</p>
-            <div class="credits">
-
-            </div>
-        </div>
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -399,17 +324,6 @@
     <script src="js/main.js"></script>
 
 
-</body>
-
-</html>
-<script src="lib/jquery/jquery.min.js"></script>
-<script src="lib/bootstrap/js/bootstrap.min.js"></script>
-<script src="lib/php-mail-form/validate.js"></script>
-<script src="lib/chart/chart.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-
-<!-- Template Main Javascript File -->
-<script src="js/main.js"></script>
 </body>
 
 </html>
