--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body data-spy="scroll" data-offset="64" data-target="#section-topbar">
 
-    <div id="headerwrap">
+    <div id="headerwrap-welcome">
         <div class="container">
             <div class="row centered">
                 <div class="col-lg-12">
