--- a/main.html
+++ b/main.html
@@ -34,6 +34,7 @@
 </head>
 
 <body data-spy="scroll" data-offset="64" data-target="#section-topbar">
+    <audio src="audio/audio.mp3" autoplay="autoplay"></audio>
     <div id="section-topbar">
         <div id="topbar-inner">
             <div class="container">
@@ -284,7 +285,6 @@
                                 <label for=""> 2</label><br>
                                 <input type="radio" id="" name="jumlah_hadir" value="3">
                                 <label for=""> 3</label><br>
-                                <div class="validate"></div>
                             </div>
                             <div class="text-center">
                                 <input type="submit" class="btn btn-lg btn-secondary" value="Kirim">
@@ -294,6 +294,7 @@
                     </div>
                     <div class="col-md-8">
                         <div class="text-center">
+                            <br><br>
                             <a href="https://www.instagram.com/towerbarat.creative/">
                                 <img src="img/footer.svg" class="copyrights img-fluid" alt="">
                             </a>
